# open.mp-hardexit

./: .gitignore  CMakeLists.txt  README.md  hardexit.inc  main.cpp
.github/workflows/: build.yml
